tests/valid_programs/generics/generic_interface.duck
struct Y {
    name: String,
} impl {
    fn clone() -> Y {
        return Y {
            name: self.name,
        }
    }
}

type Cloneable<T> = { clone: fn() -> T };

fn cloneable<T>(_with: Cloneable<T>) -> T {
    return _with.clone();
}

fn main() {
    let y: Y = Y { name: "yo" };
    cloneable<Y>(y).name->std::io::println();
}
