tests/errors/type_index/unknown_field.duck
type X = { name: String };
type Y = X[.other];

fn main() {
    let z: Y;
}
